--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Figma To HTNL</title>
+    <title>Figma To HTML</title>
   </head>
   <body style="height: 10000px">
     <!--header-->
