--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </header>
     <!--main-->
     <div class="main">
+      <!---hero-->
       <div class="hero">
         <div class="main-content">
           <div class="body">
@@ -102,8 +103,128 @@
                 </button>
               </div>
               <p class="desc desc-recent">Recent engagement</p>
-              <p class="desc stats">Recent engagement</p>
+              <p class="desc stats"></p>
               <strong> 50k</strong> Student <strong> 70+</strong> Courses
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--popular-->
+      <div class="popular">
+        <div class="main-content">
+          <div class="popular-top">
+            <!--popular right-->
+            <div class="info">
+              <h2 class="heading-lv2">Our popular courses</h2>
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+            </div>
+            <!--popular left-->
+            <div class="control">
+              <button class="control-btn">
+                <img src="./assets/icon/prev.png" alt="" />
+              </button>
+              <button class="control-btn" style="background-color: #ffb900">
+                <img src="./assets/icon/next.png" alt="" />
+              </button>
+            </div>
+          </div>
+
+          <div class="course-list">
+            <!--item 1-->
+            <div class="course-item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course1.jpg"
+                  alt="Basic web design"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a class="line-clamp break-all" href="#!"
+                      >Basic web design</a
+                    >
+                  </h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.png" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc line-clamp line-2 break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
+              </div>
+            </div>
+
+            <!--item 2-->
+            <div class="course-item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course2.jpg"
+                  alt="UI/UX design"
+                  class="thumb"
+                />
+              </a>
+
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a class="line-clamp break-all" href="#!">UI/UX design</a>
+                  </h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.png" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc line-clamp line-2 break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
+              </div>
+            </div>
+
+            <!--item 3-->
+            <div class="course-item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course3.jpg"
+                  alt="Web App design"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a class="line-clamp break-all" href="#!">Web App design</a>
+                  </h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.png" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc line-clamp line-2 break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
