--- a/index.html
+++ b/index.html
@@ -229,6 +229,97 @@
           </div>
         </div>
       </div>
+      <!--feedback-->
+      <div class="feedback">
+        <div class="main-content">
+          <div class="feedback-list">
+            <!--item 1-->
+            <div class="feedback-item">
+              <!--khoi ben trai-->
+              <div class="info">
+                <img src="./assets/img/avt1.jpg" alt="" class="avatar" />
+                <p class="member-name">Peter Moor</p>
+                <p class="desc">Studen Of Web Design</p>
+                <div class="dots">
+                  <span class="dot active"></span>
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                </div>
+              </div>
+              <!--khoi ben phai-->
+              <div class="content">
+                <img
+                  src="./assets/icon/open-quote.png"
+                  alt=""
+                  class="open-quotes"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+            <!--item 2-->
+            <div class="feedback-item">
+              <!--khoi ben trai-->
+              <div class="info">
+                <img src="./assets/img/avt2.jpg" alt="" class="avatar" />
+                <p class="member-name">Peter Moor</p>
+                <p class="desc">Studen Of Web Design</p>
+                <div class="dots">
+                  <span class="dot"></span>
+                  <span class="dot active"></span>
+                  <span class="dot"></span>
+                </div>
+              </div>
+              <!--khoi ben phai-->
+              <div class="content">
+                <img
+                  src="./assets/icon/open-quote.png"
+                  alt=""
+                  class="open-quotes"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+            <!--item 3-->
+            <div class="feedback-item">
+              <!--khoi ben trai-->
+              <div class="info">
+                <img src="./assets/img/avt3.jpg" alt="" class="avatar" />
+                <p class="member-name">Peter Moor</p>
+                <p class="desc">Studen Of Web Design</p>
+                <div class="dots">
+                  <span class="dot"></span>
+                  <span class="dot"></span>
+                  <span class="dot active"></span>
+                </div>
+              </div>
+              <!--khoi ben phai-->
+              <div class="content">
+                <img
+                  src="./assets/icon/open-quote.png"
+                  alt=""
+                  class="open-quotes"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
