sua phan feed back

--- a/index.html
+++ b/index.html
@@ -229,24 +229,28 @@
           </div>
         </div>
       </div>
-      <!--feedback-->
+
+      <!-- feedback -->
       <div class="feedback">
         <div class="main-content">
           <div class="feedback-list">
-            <!--item 1-->
+            <!-- item 1 -->
             <div class="feedback-item">
-              <!--khoi ben trai-->
+              <!-- khối bên trái -->
               <div class="info">
-                <img src="./assets/img/avt1.jpg" alt="" class="avatar" />
+                <img
+                  src="./assets/img/avt1.jpg"
+                  alt="Peter Moor"
+                  class="avatar"
+                />
                 <p class="member-name">Peter Moor</p>
-                <p class="desc">Studen Of Web Design</p>
+                <p class="desc">Student of Web Design</p>
                 <div class="dots">
-                  <span class="dot active"></span>
-                  <span class="dot"></span>
+                  <span class="dot active"></span> <span class="dot"></span>
                   <span class="dot"></span>
                 </div>
               </div>
-              <!--khoi ben phai-->
+              <!-- khối bên phải -->
               <div class="content">
                 <img
                   src="./assets/icon/open-quote.png"
@@ -261,20 +265,23 @@
                 </blockquote>
               </div>
             </div>
-            <!--item 2-->
+            <!-- item 2 -->
             <div class="feedback-item">
-              <!--khoi ben trai-->
+              <!-- khối bên trái -->
               <div class="info">
-                <img src="./assets/img/avt2.jpg" alt="" class="avatar" />
+                <img
+                  src="./assets/img/avt2.jpg"
+                  alt="Peter Moor"
+                  class="avatar"
+                />
                 <p class="member-name">Peter Moor</p>
-                <p class="desc">Studen Of Web Design</p>
+                <p class="desc">Student of Web Design</p>
                 <div class="dots">
-                  <span class="dot"></span>
-                  <span class="dot active"></span>
+                  <span class="dot"></span> <span class="dot active"></span>
                   <span class="dot"></span>
                 </div>
               </div>
-              <!--khoi ben phai-->
+              <!-- khối bên phải -->
               <div class="content">
                 <img
                   src="./assets/icon/open-quote.png"
@@ -289,20 +296,23 @@
                 </blockquote>
               </div>
             </div>
-            <!--item 3-->
+            <!-- item 3 -->
             <div class="feedback-item">
-              <!--khoi ben trai-->
+              <!-- khối bên trái -->
               <div class="info">
-                <img src="./assets/img/avt3.jpg" alt="" class="avatar" />
+                <img
+                  src="./assets/img/avt3.jpg"
+                  alt="Peter Moor"
+                  class="avatar"
+                />
                 <p class="member-name">Peter Moor</p>
-                <p class="desc">Studen Of Web Design</p>
+                <p class="desc">Student of Web Design</p>
                 <div class="dots">
-                  <span class="dot"></span>
-                  <span class="dot"></span>
+                  <span class="dot"></span> <span class="dot"></span>
                   <span class="dot active"></span>
                 </div>
               </div>
-              <!--khoi ben phai-->
+              <!-- khối bên phải -->
               <div class="content">
                 <img
                   src="./assets/icon/open-quote.png"
