chinh sua phan hero

--- a/index.html
+++ b/index.html
@@ -36,45 +36,51 @@
         </div>
       </div>
     </header>
-    <!--main-->
+    <!-- main -->
     <div class="main">
-      <!---hero-->
       <div class="hero">
         <div class="main-content">
           <div class="body">
-            <!--hero left-->
+            <!-- hero left -->
             <div class="media-block">
+              <!-- Shift + Alt + Right Arow -->
               <img
                 src="./assets/img/hero-img.png"
                 alt="Learn without limits and spread knowledge."
                 class="img"
               />
+
               <div class="hero-summary">
-                <!--item 1-->
+                <!-- item1 -->
                 <div class="item">
                   <div class="icon">
                     <img src="./assets/icon/design.png" alt="" />
                   </div>
+
                   <div class="info">
                     <p class="label">20 Courses</p>
                     <p class="title">UI/UX Design</p>
                   </div>
                 </div>
-                <!--item 2-->
+
+                <!-- item2 -->
                 <div class="item">
                   <div class="icon icon2">
                     <img src="./assets/icon/dev.png" alt="" />
                   </div>
+
                   <div class="info">
                     <p class="label">20 Courses</p>
                     <p class="title">Development</p>
                   </div>
                 </div>
-                <!--item 3-->
+
+                <!-- item3 -->
                 <div class="item">
                   <div class="icon icon3">
                     <img src="./assets/icon/marketing.png" alt="" />
                   </div>
+
                   <div class="info">
                     <p class="label">30 Courses</p>
                     <p class="title">Marketing</p>
@@ -82,7 +88,7 @@
                 </div>
               </div>
             </div>
-            <!--hero right-->
+            <!-- hero right -->
             <div class="content-block">
               <h1 class="heading">
                 Learn without limits and spread knowledge.
@@ -99,12 +105,14 @@
                   <div class="icon">
                     <img src="./assets/icon/play.png" alt="" />
                   </div>
-                  <span>watch video</span>
+                  <span>Watch Video</span>
                 </button>
               </div>
+
               <p class="desc desc-recent">Recent engagement</p>
-              <p class="desc stats"></p>
-              <strong> 50k</strong> Student <strong> 70+</strong> Courses
+              <p class="desc stats">
+                <strong>50K</strong> Students <strong>70+</strong> Courses
+              </p>
             </div>
           </div>
         </div>
